# Kyros

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
config/: daemon.conf.example
config/rulepacks/: README.md  default.json  docker-mcp.json  exclusions.json
docs/: Architecture.md  Development.md  README.md  TESTING.md  Usage.md
include/kyros/: candidate.hpp  config.hpp  evidence.hpp  kyros.hpp  mcp_server.hpp  rulepack.hpp  scanner.hpp  types.hpp  version.hpp.in
include/kyros/daemon/: daemon.hpp  state_store.hpp
include/kyros/detection/: config_detection_engine.hpp  container_detection_engine.hpp  detection_engine.hpp  network_detection_engine.hpp  process_detection_engine.hpp
include/kyros/http/: http_client.hpp
include/kyros/platform/: platform_adapter.hpp  process.hpp
include/kyros/platform/macos/: macos_process.hpp
include/kyros/reporting/: cli_reporter.hpp  csv_reporter.hpp  html_reporter.hpp  json_reporter.hpp  reporter.hpp  reporting_engine.hpp
include/kyros/scan_types/: config_scan.hpp  container_scan.hpp  network_scan.hpp  process_scan.hpp  scan_type.hpp
include/kyros/testing/: http_testing_engine.hpp  protocol_detector.hpp  server_interrogator.hpp  stdio_testing_engine.hpp  testing_engine.hpp
src/: CMakeLists.txt  candidate.cpp  main.cpp  rulepack.cpp  scanner.cpp
src/daemon/: daemon.cpp  management_client.cpp  report_queue.cpp  scheduler.cpp  state_store.cpp
src/daemon/platform/: systemd_service.cpp
src/detection/: config_detection_engine.cpp  container_detection_engine.cpp  detection_engine.cpp  network_detection_engine.cpp  process_detection_engine.cpp
src/http/: http_client.cpp
src/platform/: process.cpp
src/platform/linux/: linux_platform_adapter.cpp  linux_process.cpp
src/platform/macos/: macos_platform_adapter.cpp  macos_process.cpp
src/reporting/: cli_reporter.cpp  csv_reporter.cpp  html_reporter.cpp  json_reporter.cpp  reporter.cpp  reporting_engine.cpp
src/scan_types/: config_scan.cpp  container_scan.cpp  network_scan.cpp  process_scan.cpp  scan_type.cpp
src/testing/: http_testing_engine.cpp  protocol_detector.cpp  server_interrogator.cpp  stdio_testing_engine.cpp  testing_engine.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: test_end_to_end.cpp
tests/mocks/: mock_platform_adapter.hpp
tests/unit/: test_detection_engines.cpp  test_evidence.cpp  test_platform_adapters.cpp  test_rulepack.cpp  test_scanner.cpp
tests/utils/: test_helpers.hpp
